--- a/pom.xml
+++ b/pom.xml
@@ -50,3 +50,16 @@
         </plugins>
     </build>
 </project>
+   <!-- Distribution Management for deploying artifacts -->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexusRepo</id>
+            <url>http://34.231.241.202:8081/repository/sample-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>nexusRepo</id>
+            <url>http://34.231.241.202:8081/repository/sample-releases/</url>
+        </repository>
+    </distributionManagement>
+</project>
+
