--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.boxfuse.samples</groupId>
     <artifactId>hello</artifactId>
     <packaging>war</packaging>
-    <version>2.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>hello</name>
     <url>https://github.com/AjayaNayak2000/boxfuse-sample-java-war-hello.git</url>
          
